--- a/blocklib/picoscope6000/test/meson.build
+++ b/blocklib/picoscope6000/test/meson.build
@@ -2,12 +2,10 @@
 #    QA
 ###################################################
 
-testdeps = [cppunit_dep, gnuradio_blocklib_picoscope6000_dep]
-linklibs = ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks', '-lgnuradio-blocklib-streamops'] # TODO(PORT) only link necessary
+testdeps = [cppunit_dep, gnuradio_blocklib_picoscope6000_dep, gr_blocklib_blocks, gr_blocklib_streamops]
 
 qa_picoscope_6000 = executable('qa_picoscope_6000', 'qa_picoscope_6000.cc',
-                                dependencies: testdeps,
-                                link_args: linklibs)
+                                dependencies: testdeps)
 
 # TODO only run when explicitly request per cmd-line arg
 test('Picoscope 6000', qa_picoscope_6000)
