--- a/blocklib/picoscope3000a/test/meson.build
+++ b/blocklib/picoscope3000a/test/meson.build
@@ -2,8 +2,7 @@
 #    QA
 ###################################################
 
-testdeps = [cppunit_dep, gnuradio_blocklib_picoscope3000a_dep]
-linklibs = ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks', '-lgnuradio-blocklib-streamops'] # TODO(PORT) only link necessary
+testdeps = [cppunit_dep, gnuradio_blocklib_picoscope3000a_dep, gr_blocklib_blocks, gr_blocklib_streamops]
 
 qa_picoscope_3000a = executable('qa_picoscope_3000a', 'qa_picoscope_3000a.cc',
                                 dependencies: testdeps,
