--- a/blocklib/picoscope4000a/test/meson.build
+++ b/blocklib/picoscope4000a/test/meson.build
@@ -2,12 +2,10 @@
 #    QA
 ###################################################
 
-testdeps = [cppunit_dep, gnuradio_blocklib_picoscope4000a_dep]
-linklibs = ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks', '-lgnuradio-blocklib-streamops'] # TODO(PORT) only link necessary
+testdeps = [cppunit_dep, gnuradio_blocklib_picoscope4000a_dep, gr_blocklib_blocks, gr_blocklib_streamops]
 
 qa_picoscope_4000a = executable('qa_picoscope_4000a', 'qa_picoscope_4000a.cc',
-                                dependencies: testdeps,
-                                link_args: linklibs)
+                                dependencies: testdeps)
 
 # TODO only run when explicitly request per cmd-line arg
 test('Picoscope 4000a', qa_picoscope_4000a)
