Revert "meson: explicit dependencies to gr libraries"
Revert until upstream GR patch is in.

This reverts commit 3740ff656d1a6a1386177f976779ba2d4bfe40c6.

--- a/blocklib/digitizers/lib/meson.build
+++ b/blocklib/digitizers/lib/meson.build
@@ -1,5 +1,5 @@
 digitizers_sources += ['digitizer_block_impl.cc', 'picoscope_impl.cc']
-digitizers_deps += [gnuradio_gr_dep, volk_dep, fmt_dep, spdlog_dep, boost_dep, libzmq_dep, pmt_dep, python3_embed_dep, json_dep, root_dep, gr_kernel_fft, gr_kernel_math]
+digitizers_deps += [gnuradio_gr_dep, volk_dep, fmt_dep, spdlog_dep, boost_dep, libzmq_dep, pmt_dep, python3_embed_dep, json_dep, root_dep]
 
 block_cpp_args = ['-DHAVE_CPU']
 
@@ -10,6 +10,7 @@ gnuradio_blocklib_digitizers_lib = library('gnuradio-blocklib-digitizers',
     install : true,
     link_language: 'cpp',
     dependencies : digitizers_deps,
+    link_args : ['-lgnuradio-runtime', '-lgnuradio-kernel-fft', '-lgnuradio-kernel-math'],
     cpp_args : block_cpp_args)
 
 gnuradio_blocklib_digitizers_dep = declare_dependency(include_directories : ['../include/gnuradio', '../include', '../lib'], # TODO see above for ../lib
