--- a/blocklib/picoscope3000a/test/meson.build
+++ b/blocklib/picoscope3000a/test/meson.build
@@ -2,7 +2,8 @@
 #    QA
 ###################################################
 
-testdeps = [cppunit_dep, gnuradio_blocklib_picoscope3000a_dep, gr_blocklib_blocks, gr_blocklib_streamops]
+testdeps = [cppunit_dep, gnuradio_blocklib_picoscope3000a_dep]
+linklibs = ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks', '-lgnuradio-blocklib-streamops'] # TODO(PORT) only link necessary
 
 qa_picoscope_3000a = executable('qa_picoscope_3000a', 'qa_picoscope_3000a.cc',
                                 dependencies: testdeps,
