Add Timing Receiver (Simulation) (#117)
* Add Timing Receiver (Simulation)

Implements fair-acc/opendigitizer#31

* Implement UDP Timing Receiver using ZeroMQ RADIO/DISH

* digitizers: Implement new timing trigger logic

Add message input port to digitizers, which is used to connect WR
digitizers (or simulators) and add timing trigger tags to the data
stream.

If the digitizer has a trigger input port (digital or analog)
configured, the detected edges are used together with the timing
messages to generate the tags. If no such port is configured,
the latest timing message is used.

Also removed the time_realignment block, under the assumption that
it is not used anymore in the new architecture, and replaced the old
trigger tag usage in other blocks with the new format.

* CI: Enable GCC 12

See if this helps with some fmt error failing to format std::chrono::duration.

* Remove offset/timestamp adjustment for rapid mode

* Test for trigger tags in rapid block mode

* Fix trigger offset in rapid block mode

The offset must be adjusted for the presamples

* meson: add libpico dependencies

libpicoscope depends on libusb and libz, this explicitly resolves these
dependencies in the buildsystem.

* CI: Add libusb-1.0-dev as picoscope dependency

Co-authored-by: Alexander Krimm <A.Krimm@gsi.de>

--- a/blocklib/digitizers/enums.yml
+++ b/blocklib/digitizers/enums.yml
@@ -20,3 +20,9 @@ digitizer_downsampling_mode_t:
   - id: MIN_MAX_AGG
   - id: DECIMATE
   - id: AVERAGE
+
+timing_receiver_simulation_mode_t:
+  enumerators:
+  - id: MANUAL
+  - id: PERIODIC_INTERVAL
+  - id: ZEROMQ
