--- a/blocklib/digitizers/test/meson.build
+++ b/blocklib/digitizers/test/meson.build
@@ -63,9 +63,9 @@ qa_stream_to_vector_overlay = executable('qa_stream_to_vector_overlay', 'qa_stre
 qa_time_domain_sink = executable('qa_time_domain_sink', 'qa_time_domain_sink.cc',
                                  dependencies: testdeps,
                                  link_args: linklibs)
-qa_time_realignment = executable('qa_time_realignment', 'qa_time_realignment.cc',
-                                 dependencies: testdeps,
-                                 link_args: linklibs)
+qa_timing_receiver = executable('qa_timing_receiver', 'qa_timing_receiver.cc',
+                                dependencies: testdeps,
+                                link_args: linklibs)
 qa_wr_receiver = executable('qa_wr_receiver', 'qa_wr_receiver.cc',
                             dependencies: testdeps,
                             link_args: ['-lgnuradio-runtime', '-lgnuradio-blocklib-blocks', '-lgnuradio-blocklib-math'])
@@ -90,5 +90,5 @@ test('STFT Goertzel Dynamic', qa_stft_goertzl_dynamic)
 test('STFT Goertzel Dynamic_Decimated', qa_stft_goertzl_dynamic_decimated)
 test('Stream to Vector Overlay', qa_stream_to_vector_overlay)
 test('Time Domain Sink', qa_time_domain_sink)
-test('Time Realignment', qa_time_realignment)
+test('Timing Receiver', qa_timing_receiver)
 test('WR Receiver', qa_wr_receiver)
