PicoScope: Fix port settings
Add timing port everywhere, fix number of digital ports.

--- a/blocklib/picoscope6000/picoscope6000/picoscope6000.yml
+++ b/blocklib/picoscope6000/picoscope6000/picoscope6000.yml
@@ -121,6 +121,10 @@ callbacks:
          dtype: gr::digitizers::trigger_direction_t
 
 ports:
+-   domain: message
+    id: timing
+    direction: input
+    optional: true
 -   domain: stream
     id: out
     direction: out
