--- a/blocklib/picoscope6000/picoscope6000/picoscope6000.yml
+++ b/blocklib/picoscope6000/picoscope6000/picoscope6000.yml
@@ -131,6 +131,11 @@ ports:
     type: rf32
     multiplicity: '8'
     optional: true
+-   domain: stream
+    id: ports
+    direction: out
+    type: ri8
+    multiplicity: '2'
 
 implementations:
 -   id: cpu
