--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,20 +25,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         name: Checkout Project
-      - name: Install picoscope
+      - name: Install gr-digitizer dependencies, enable gcc 12
         run: |
           su -c "apt-get update"
-          su -c "apt-get --yes install wget gnupg2 apt-utils udev libusb-1.0-0-dev"
-          # https://www.picotech.com/downloads/linux
-          wget -qO - https://labs.picotech.com/Release.gpg.key | su -c "apt-key add -"
-          su -c "bash -c 'echo \"deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main\" >/etc/apt/sources.list.d/picoscope7.list'"
-          su -c "apt-get update"
-          su -c "apt-get --yes install libps3000a libps4000a libps5000a libps6000 libps6000a" || true # ignore udev errors in post install because of udev in container
+          su -c "apt-get --yes install libboost-dev libboost-chrono-dev libboost-thread-dev libsndfile1-dev libcppunit-dev gcc-12 g++-12"
+          su -c "update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 12"
+          su -c "update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 12"
       - name: Install root
         run: |
           su -c "apt-get update"
           # https://root.cern/install/dependencies/, removed X dependencies: libx11-dev libxpm-dev libxft-dev libxext-dev 
-          su -c "apt-get --yes install dpkg-dev cmake g++ gcc binutils python3 libssl-dev" || true 
+          su -c "apt-get --yes install dpkg-dev cmake g++ gcc binutils python3 libssl-dev"
           # https://root.cern/install/#download-a-pre-compiled-binary-distribution
           mkdir .local
           cd .local
@@ -55,12 +52,15 @@ jobs:
           cmake -GNinja -DCMAKE_INSTALL_PREFIX=$HOME/.local/lime ..
           ninja
           su -c "ninja install"
-      - name: Install gr-digitizer dependencies, enable gcc 12
+      - name: Install picoscope
         run: |
           su -c "apt-get update"
-          su -c "apt-get --yes install libboost-dev libboost-chrono-dev libboost-thread-dev libsndfile1-dev libcppunit-dev gcc-12 g++-12" || true
-          su -c "update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 12"
-          su -c "update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 12"
+          su -c "apt-get --yes install wget gnupg2 apt-utils udev libusb-1.0-0-dev"
+          # https://www.picotech.com/downloads/linux
+          wget -qO - https://labs.picotech.com/Release.gpg.key | su -c "apt-key add -"
+          su -c "bash -c 'echo \"deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main\" >/etc/apt/sources.list.d/picoscope7.list'"
+          su -c "apt-get update"
+          su -c "apt-get --yes install libps3000a libps4000a libps5000a libps6000 libps6000a" || true # ignore udev errors in post install because of udev in container
       - name: Meson Setup
         shell: bash
         run: |
