--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install gr-digitizer dependencies, enable gcc 12
         run: |
           su -c "apt-get update"
-          su -c "apt-get --yes install libboost-dev libboost-chrono-dev libboost-thread-dev libsndfile1-dev libcppunit-dev gcc-12 g++-12"
+          su -c "apt-get --yes install libboost-dev libboost-chrono-dev libboost-thread-dev libsndfile1-dev libcppunit-dev gcc-12 g++-12 wget"
           su -c "update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 12"
           su -c "update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 12"
       - name: Install root
@@ -55,7 +55,7 @@ jobs:
       - name: Install picoscope
         run: |
           su -c "apt-get update"
-          su -c "apt-get --yes install wget gnupg2 apt-utils udev libusb-1.0-0-dev"
+          su -c "apt-get --yes install gnupg2 apt-utils udev libusb-1.0-0-dev"
           # https://www.picotech.com/downloads/linux
           wget -qO - https://labs.picotech.com/Release.gpg.key | su -c "apt-key add -"
           su -c "bash -c 'echo \"deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main\" >/etc/apt/sources.list.d/picoscope7.list'"
