--- a/blocklib/limesdr/limesdr/limesdr.yml
+++ b/blocklib/limesdr/limesdr/limesdr.yml
@@ -13,112 +13,19 @@ parameters:
 -   id: sample_rate
     label: Sample Rate (Hz)
     dtype: rf64
-    default: 10000
--   id: buffer_size
-    label: Buffer Size
-    dtype: size
-    default: 8192
--   id: nr_buffers
-    label: Number of Buffers
-    dtype: size
-    default: 100
+    default: 100000
 -   id: driver_buffer_size
     label: Driver Buffer Size
     dtype: size
     default: 100000
--   id: pre_samples
-    label: Pre-Sample Count
+-   id: enabled_channels
+    label: Enabled Channels
     dtype: size
-    default: 1000
--   id: post_samples
-    label: Post-Sample Count
-    dtype: size
-    default: 9000
--   id: acquisition_mode
-    label: Acquisition Mode
-    dtype: enums/digitizer_acquisition_mode_t
-    is_enum: true
-    default: digitizer_acquisition_mode_t::STREAMING
--   id: rapid_block_nr_captures
-    label: No. of Captures (Rapid Block Mode)
-    dtype: size
-    default: 1
--   id: streaming_mode_poll_rate
-    label: Polling rate (Streaming Mode)
-    dtype: rf64
-    default: 0.001
--   id: downsampling_mode
-    label: Downsampling Mode
-    dtype: enums/digitizer_downsampling_mode_t
-    is_enum: true
-    default: digitizer_downsampling_mode_t::NONE
--   id: downsampling_factor
-    label: Downsampling Factor
-    dtype: size
-    default: 1
--   id: auto_arm
-    label: Auto-Arm
-    dtype: bool
-    default: 'true'
--   id: trigger_once
-    label: Trigger once
-    dtype: bool
-    default: 'false'
-
-callbacks:
-   - id: hardware_version
-     const: true
-     return: string
-   - id: driver_version
-     const: true
-     return: string
-   - id: actual_sample_rate
-     const: true
-     return: rf64
-   - id: initialize
-     return: void
-   - id: close
-     return: void
-# TODO(PORT) maybe makes these parameters (list of structs)
-   - id: set_aichan
-     return: void
-     args:
-       - id: id
-         dtype: string
-       - id: enabled
-         dtype: bool
-       - id: range
-         dtype: rf64
-       - id: coupling
-         dtype: gr::digitizers::coupling_t
-       - id: range_offset
-         dtype: rf64
-         default: '0' # TODO(PORT) this is currently ignored by the code generation
-   - id: set_diport
-     return: void
-     args:
-       - id: id
-         dtype: string
-       - id: enabled
-         dtype: bool
-       - id: thresh_voltage
-         dtype: rf64
-   - id: set_aichan_trigger
-     return: void
-     args:
-       - id: channel_id
-         dtype: string
-       - id: trigger_direction
-         dtype: gr::digitizers::trigger_direction_t
-       - id: threshold
-         dtype: rf64
-   - id: set_di_trigger
-     return: void
-     args:
-       - id: pin
-         dtype: uint8_t
-       - id: trigger_direction
-         dtype: gr::digitizers::trigger_direction_t
+    container: vector
+-   id: timing_trigger_mask
+    label: Timing Trigger Mask
+    dtype: int
+    default: 0
 
 ports:
 -   domain: message
@@ -128,13 +35,13 @@ ports:
 -   domain: stream
     id: channels
     direction: out
-    type: rf32
-    multiplicity: '2'
+    type: ri16 # Two shorts per sample (complex I/Q)
+    shape: '2'
+    multiplicity: '4'
 -   domain: stream
-    id: ports
+    id: digital
     direction: out
     type: ri8
-    multiplicity: '2'
 
 implementations:
 -   id: cpu
