--- a/blocklib/digitizers/CMakeLists.txt
+++ b/blocklib/digitizers/CMakeLists.txt
@@ -7,7 +7,7 @@ set(DIGITIZERS_HEADERS
 
 target_include_directories(gr-digitizers INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<INSTALL_INTERFACE:include/>)
 
-target_link_libraries(gr-digitizers INTERFACE gr-helpers graph-prototype)
+target_link_libraries(gr-digitizers INTERFACE gr-digitizers-options gr-helpers graph-prototype)
 set_target_properties(gr-digitizers PROPERTIES PUBLIC_HEADER "${DIGITIZERS_HEADERS}")
 
 if (ENABLE_TESTING)
