--- a/gr-picoscope/CMakeLists.txt
+++ b/gr-picoscope/CMakeLists.txt
@@ -6,5 +6,5 @@ set(GR_PICOSCOPE_HEADERS
 
 target_include_directories(gr-picoscope INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<INSTALL_INTERFACE:include/>)
 
-target_link_libraries(gr-picoscope INTERFACE graph-prototype volk)
+target_link_libraries(gr-picoscope INTERFACE gr-digitizers-options graph-prototype)
 set_target_properties(gr-picoscope PROPERTIES PUBLIC_HEADER "${GR_PICOSCOPE_HEADERS}")
